--- a/Project-Recrutment/src/app/frogot-password/frogot-password.component.html
+++ b/Project-Recrutment/src/app/frogot-password/frogot-password.component.html
@@ -1,1 +1,36 @@
-<p>frogot-password works!</p>
+<div class="reset-container">
+  <div class="reset-box">
+    <h2>Reset Password</h2>
+
+    <form [formGroup]="resetForm" (ngSubmit)="submit()">
+
+      <div class="input-group">
+        <label>User ID</label>
+        <input type="number" formControlName="userId" placeholder="Enter your User ID">
+      </div>
+
+      <div class="input-group">
+        <label>New Password</label>
+        <input type="password" formControlName="newPassword" placeholder="Enter new password">
+      </div>
+
+      <div class="input-group">
+        <label>Confirm Password</label>
+        <input type="password" formControlName="confirmPassword" placeholder="Confirm new password">
+      </div>
+
+      <!-- Messages -->
+      <div class="error" *ngIf="error">{{ error }}</div>
+      <div class="success" *ngIf="message">{{ message }}</div>
+
+      <button type="submit" class="reset-btn" [disabled]="loading">
+        {{ loading ? 'Updating...' : 'Update Password' }}
+      </button>
+
+      <div class="back-link">
+        <a (click)="goToLogin()">Back to Login</a>
+      </div>
+
+    </form>
+  </div>
+</div>
