--- a/Project-Recrutment/src/app/login/login.component.html
+++ b/Project-Recrutment/src/app/login/login.component.html
@@ -3,44 +3,36 @@
     <h2>Login</h2>
 
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      
+
       <!-- Email -->
       <div class="form-group">
         <label>Email</label>
-        <input 
-          type="email" 
-          formControlName="email" 
-          placeholder="Enter your email"
-        />
-        <small *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
-          Please enter a valid email
+        <input type="email" formControlName="email" placeholder="Enter your email" />
+        <small *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
+          Enter a valid email
         </small>
       </div>
 
       <!-- Password -->
       <div class="form-group">
         <label>Password</label>
-        <input 
-          type="password" 
-          formControlName="password" 
-          placeholder="Enter your password"
-        />
-        <small *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
-          Password is required (min 6 characters)
+        <input type="password" formControlName="password" placeholder="Enter your password" />
+        <small *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid">
+          Min 6 characters required
         </small>
       </div>
 
-      <!-- Login Button -->
+      <!-- Button -->
       <button type="submit" [disabled]="loginForm.invalid">
         Login
       </button>
 
-      <!-- Extra Links -->
+      <!-- Links -->
       <div class="auth-links">
-        <button (click)="navigateToRegister()">Don't have an account? Register</button>
-        <button (click)="navigateToForgotPassword()">Forgot Password?</button>
+        <a routerLink="/register" (click)="navigateToRegister()">Don't have an account? Register</a>
+        <a routerLink="/forgot-password" (click)="navigateToForgotPassword()">Forgot Password?</a>
       </div>
-
+      
     </form>
   </div>
 </div>
